--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,6 @@
 @import 'theme-variables.scss';
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
+@import 'iconic'
 
 
 /* You can add global styles to this file, and also import other style files */
