--- a/src/styles/theme-variables.scss
+++ b/src/styles/theme-variables.scss
@@ -66,8 +66,8 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       #ac83de !default;
-$secondary:     $gray-600 !default;
+$primary:       #9167E4 !default;
+$secondary:     #7099EA !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -90,3 +90,12 @@ $theme-colors: map-merge(
   ),
   $theme-colors
 );
+
+
+// Typography
+//
+// Font, line-height, and color for body text, headings, and more.
+
+// stylelint-disable value-keyword-case
+$font-family-sans-serif:      'Raleway', sans-serif !default;
+$font-family-base:            $font-family-sans-serif !default;
