--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -1,7 +1,7 @@
-@import '../../styles/theme-variables.scss';
+@import '../../../styles/theme-variables.scss';
 
 #hero {
-  background: linear-gradient(to bottom, rgba($primary,0.85) 0%,rgba($secondary,0.85) 50%), url('../../assets/images/bg.jpg') center center no-repeat/cover;
+  background: linear-gradient(to bottom, rgba($primary,0.85) 0%,rgba($secondary,0.85) 50%), url('../../../assets/images/bg.jpg') center center no-repeat/cover;
   background-attachment: fixed;
   min-height: 350px;
   transition: all ease .3s;
