HTTP call for all users
Was able to successfully grab all users from the API and show them in the UI

--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -1,9 +1,12 @@
 <section class="container p-5">
+  <!-- Add New User -->
   <div class="row">
     <div class="col-md-12 text-right">
-      <button (click)="openNewUserModal()" type="button" class="btn btn-primary"><span class="oi" data-glyph="person"></span> Add New User</button>
+      <button (click)="openNewUserModal()" type="button" class="btn btn-primary"><span class="oi"
+          data-glyph="person"></span> Add New User</button>
     </div>
   </div>
+  <!-- Search Box -->
   <div class="row">
     <div class="col-md-6">
       <div class="col-auto">
@@ -11,10 +14,15 @@
           <div class="input-group-prepend">
             <div class="input-group-text"><span class="oi" data-glyph="magnifying-glass"></span></div>
           </div>
-          <input (keyup)="searchUsers($event)" type="text" class="form-control" id="inlineFormInputGroup" placeholder="Search For Someone...">
+          <input (keyup)="searchUsers($event)" type="text" class="form-control" id="inlineFormInputGroup"
+            placeholder="Search For Someone...">
         </div>
       </div>
     </div>
     <div class="col-md-6">Filters</div>
+  </div>
+  <!-- List users-->
+  <div class="row">
+    <app-list-user-item class='col-md-6' *ngFor="let user of users" [user]="user"></app-list-user-item>
   </div>
 </section>
