--- a/src/styles/theme-variables.scss
+++ b/src/styles/theme-variables.scss
@@ -67,7 +67,7 @@ $colors: map-merge(
 );
 
 $primary:       #9167E4 !default;
-$secondary:     #7099EA !default;
+$secondary:     #D8BAFA !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
