--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <app-hero></app-hero>
-<app-directory></app-directory>
+<app-directory 
+  [users]="users" 
+  [loading]="loading" 
+  [error]="error"
+  [searchUsers]="searchUsers"
+  [fetchUsers]="fetchUsers"
+  [errorMessage]="errorMessage" 
+  [search]="search"></app-directory>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
