Fixed search box not fetching users
I moved the search box into a seperate component and listened for changes on the search input to fetch users from the API

--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -2,15 +2,7 @@
   <!-- Search Box -->
   <div class="row">
     <div class="col-md-12">
-      <div class="mt-4 mb-4">
-        <div class="input-group mb-2">
-          <div class="input-group-prepend">
-            <div class="input-group-text"><span class="oi" data-glyph="magnifying-glass"></span></div>
-          </div>
-          <input (keyup)="onSearchChange($event)" type="text" class="form-control" id="inlineFormInputGroup"
-            placeholder="Search For Someone...">
-        </div>
-      </div>
+      <app-search-box [onSearchChange]="onSearchChange" [fetchUsers]="fetchUsers" [search]="search"></app-search-box>
     </div>
   </div>
   <!-- Filters-->
