Added clear filters functionality
I added the ability to clear filters. I also fixed some styling issues with the filters and changed the amount of time on the debounce function.

--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -10,7 +10,7 @@
     <div class="col-md-12">
       <app-search-filters [fetchUsers]="fetchUsers" [onLimitChange]="onLimitChange" [onOrderByChange]="onOrderByChange"
         [onOrderByTypeChange]="onOrderByTypeChange" [limit]="limit" [orderBy]="orderBy" [orderByType]="orderByType"
-        [isCollapsed]="true"></app-search-filters>
+        [isCollapsed]="true" [clearFilters]="clearFilters"></app-search-filters>
     </div>
   </div>
   <!-- Pagination -->
