Fixed child routing issue

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,1 +1,17 @@
-<p>profile works!</p>
+<section id="profile" class="m-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>John Doe</h1>
+        <ul class="list-group">
+          <li class="list-group-item">First Name: Cras justo odio</li>
+          <li class="list-group-item">Last Name: Cras justo odio</li>
+          <li class="list-group-item">Email: johndoe@gmail.com</li>
+          <li class="list-group-item">First Name: Cras justo odio</li>
+          <li class="list-group-item">First Name: Cras justo odio</li>
+          <li class="list-group-item">First Name: Cras justo odio</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
