Finished single user profile

--- a/src/app/components/list-user-item/list-user-item.component.html
+++ b/src/app/components/list-user-item/list-user-item.component.html
@@ -7,6 +7,6 @@
     <p class="card-text"><small class="text-muted">Member since {{ user.dateCreated | date: 'MMMM d, yyyy' }}</small></p>
   </div>
   <div class="card-footer">
-    <small class="text-muted"><a href="/user/{{ user.id }}" class="card-link">View</a></small>
+    <small class="text-muted"><a href="/user/{{ user.id }}" class="card-link">View Profile</a></small>
   </div>
 </div>
