--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,11 +1,11 @@
 <section class="container-fluid" id="hero">
   <div class="row">
     <div class="col-md-12">
-      <div class='logo p-4'><img src="../../assets/images/logo.svg" class="img-fluid" alt="iOffice logo" /></div>
+      <div class='logo p-4'><a routerLink="/"><img src="../../assets/images/logo.svg" class="img-fluid" alt="iOffice logo" /></a></div>
     </div>
     <div class="col-md-12 mt-4 text-center">
-      <h1 class="title">iOffice People Directory</h1>
-      <p class="subtitle">Search the box below to find an person</p>
+      <h1 class="title">{{ title }}</h1>
+      <p class="subtitle">{{ subtitle }}</p>
       <div class="look-down"><span class="oi" data-glyph="arrow-circle-bottom"></span></div>
     </div>
   </div>
