--- a/src/app/components/directory/directory.component.html
+++ b/src/app/components/directory/directory.component.html
@@ -1,3 +1,4 @@
+<!-- Hero -->
 <app-hero title="iOffice People Directory" subtitle="Search the box below to find an person"></app-hero>
 <section class="container p-5">
   <!-- Search Box -->
