--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,4 @@
+<!-- Hero -->
 <app-hero title="User Profile" subtitle="View your user profile below"></app-hero>
 <app-loading *ngIf="loading else userprofile" loadingMessage="Fetching user..."></app-loading>
 <ng-template #userprofile>
